--- a/tools/run_tests/xds_k8s_test_driver/kubernetes-manifests/gamma/route_http.yaml
+++ b/tools/run_tests/xds_k8s_test_driver/kubernetes-manifests/gamma/route_http.yaml
@@ -8,14 +8,18 @@ metadata:
     owner: xds-k8s-interop-test
 spec:
   parentRefs:
-  - name: ${service_name_1}
-    kind: Service
+  - name: ${mesh_name}
+    namespace: ${namespace_name}
+    group: net.gke.io
+    kind: TDMesh
+  hostnames:
+  - ${xds_server_uri}
   rules:
   - matches:
     - path:
         type: Exact
         value: /grpc.testing.TestService/UnaryCall
     backendRefs:
-    - name: ${service_name_2}
+    - name: ${service_name}
       port: 50051
 ...
