--- a/tools/run_tests/xds_k8s_test_driver/kubernetes-manifests/client.deployment.yaml
+++ b/tools/run_tests/xds_k8s_test_driver/kubernetes-manifests/client.deployment.yaml
@@ -55,6 +55,8 @@ spec:
             value: "true"
           - name: GRPC_EXPERIMENTAL_ENABLE_OUTLIER_DETECTION
             value: "true"
+          - name: GRPC_EXPERIMENTAL_XDS_ENABLE_OVERRIDE_HOST
+            value: "true"
         volumeMounts:
           - mountPath: /tmp/grpc-xds/
             name: grpc-td-conf
@@ -73,11 +75,9 @@ spec:
           args:
             - "--output=/tmp/bootstrap/td-grpc-bootstrap.json"
             - "--vpc-network-name=${network}"
-            % if xds_server_uri:
-            - "--xds-server-uri=${xds_server_uri}"
-            % endif
+            - "--xds-server-uri=staging-trafficdirector.sandbox.googleapis.com:443"
             % if config_mesh:
-            - "--config-mesh-experimental=${config_mesh}"
+            - "--config-mesh-experimental=ssa-mesh"
             % endif
           resources:
             limits:
